# clsol

./: .gitignore  .gitpod.yml  .travis.yml  Cargo.toml  README.md
src/: card.rs  command.rs  config.rs  deck.rs  foundation.rs  game.rs  main.rs  pile.rs  stock.rs  tableau.rs  waste.rs
